# pet-jax

./: .gitignore  README.md  pyproject.toml  tox.ini
examples/md-ipi/: README.md  input.xml  run.sh  start.xyz
examples/train/: README.md  model.yaml  prepare.py  settings.yaml
src/pet/: __init__.py  _install_ipi_driver.py  batching.py  calculator.py  core.py  ipi.py  les.py  model.py  modules.py  train.py  transforms.py
tests/: conftest.py  test_calculator.py  test_ipi.py  test_les.py  test_model.py
